# ProcessStarter

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/processStarter/: CMakeLists.txt  ProcessStarter.hpp  example.cpp  main.cpp  processInfo.hpp  processInfoLoader.hpp  processInfoSerialization.hpp  yaml2json.hpp
apps/testApp/: CMakeLists.txt  testApp.cpp
data/: processList.yaml
examples/simple/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/processLib/: CMakeLists.txt
libs/processLib/core/: config.hpp  lib.cpp  lib.hpp  processCRTP.hpp  processLib.cpp  processLib.hpp
tests/: CMakeLists.txt
tests/Sample/: SampleTests.cpp
tests/processLib/: SampleTests.cpp
